add header with logo and navbar with css styling

--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
             rel="stylesheet"
         />
     </head>
-    <body></body>
+    <body>
+       <!-- Start Header -->
+        <div class="header" id="header">
+            <div class="container">
+                <a href="#" class="logo">Bosla</a>
+                <ul class="main-nav">
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#add-product">Add Product</a></li>
+                    <li><a href="#stats">Stats</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- End Header -->
+    </body>
 </html>
