add landing page

--- a/index.html
+++ b/index.html
@@ -29,5 +29,23 @@
             </div>
         </div>
         <!-- End Header -->
+        <!-- Start Landing -->
+        <div class="landing">
+            <div class="container">
+                <div class="text">
+                    <h1>Welcome, To Bosla World</h1>
+                    <p>
+                        Discover high-quality products carefully selected to bring you comfort, style, and value in every purchase
+                    </p>
+                </div>
+                <div class="image">
+                    <img src="images/landing.png" alt="Landing Img" />
+                </div>
+            </div>
+            <a href="#products" class="go-down">
+                <i class="fas fa-angle-double-down fa-2x"></i>
+            </a>
+        </div>
+        <!-- End Landing --> 
     </body>
 </html>
