--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </a>
         </div>
         <!-- End Landing -->
-                 <!-- Start Products -->
+        <!-- Start Products -->
         <div class="products" id="products">
             <h2 class="main-title">products</h2>
             <div class="container">
@@ -93,6 +93,33 @@
                 <button type="submit" class="submit-btn">Add Product</button>
             </form>
         </div>
-        <!-- End Products --> 
+        <!-- End Products -->
+         <!-- Start Stats -->
+        <div class="stats" id="stats">
+            <h2>Our Awesome Stats</h2>
+            <div class="container">
+                <div class="box">
+                    <i class="far fa-user fa-2x fa-fw"></i>
+                    <span class="num">300</span>
+                    <span class="text">Clients</span>
+                </div>
+                <div class="box">
+                    <i class="fas fa-code fa-2x fa-fw"></i>
+                    <span class="num">135</span>
+                    <span class="text">Projects</span>
+                </div>
+                <div class="box">
+                    <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+                    <span class="num">50</span>
+                    <span class="text">Countries</span>
+                </div>
+                <div class="box">
+                    <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+                    <span class="num">500</span>
+                    <span class="text">Money</span>
+                </div>
+            </div>
+        </div>
+        <!-- End Stats --> 
     </body>
 </html>
