--- a/index.html
+++ b/index.html
@@ -120,6 +120,70 @@
                 </div>
             </div>
         </div>
-        <!-- End Stats --> 
+        <!-- End Stats -->
+        <!-- Start Footer -->
+        <div class="footer">
+            <div class="container">
+                <div class="box">
+                    <h3>Bosla</h3>
+                    <ul class="social">
+                        <li>
+                            <a href="#" class="facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="youtube">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="text">
+                        Bosla is an eCommerce platform designed to make online shopping simple, fast, and secure. We offer a wide range of products
+                    </p>
+                </div>
+                <div class="box">
+                    <ul class="links">
+                        <li><a href="#">Our Services</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <div class="line">
+                        <i class="fas fa-map-marker-alt fa-fw"></i>
+                        <div class="info">Egypt, Giza, Inside The October , Room Number 220</div>
+                    </div>
+                    <div class="line">
+                        <i class="far fa-clock fa-fw"></i>
+                        <div class="info">Business Hours: From 10:00 To 18:00</div>
+                    </div>
+                    <div class="line">
+                        <i class="fas fa-phone-volume fa-fw"></i>
+                        <div class="info">
+                            <span>+20107539517</span>
+                            <span>+20107539517</span>
+                          </div>
+                    </div>
+                </div>
+                <div class="box footer-gallery">
+                    <img src="images/b1.avif" alt="" />
+                    <img src="images/b2.avif" alt="" />
+                    <img src="images/c1.jpg" alt="" />
+                    <img src="images/c2.avif" alt="" />
+                    <img src="images/s1.avif" alt="" />
+                    <img src="images/s2.avif" alt="" />
+                </div>
+            </div>
+            <p class="copyright">&copy; 2025 Bosla. All rights reserved.</p>
+        </div>
+        <!-- End Footer --> 
     </body>
 </html>
