link main.js file to html page and add crud functionality for products

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         />
     </head>
     <body>
-       <!-- Start Header -->
+        <!-- Start Header -->
         <div class="header" id="header">
             <div class="container">
                 <a href="#" class="logo">Bosla</a>
@@ -35,7 +35,8 @@
                 <div class="text">
                     <h1>Welcome, To Bosla World</h1>
                     <p>
-                        Discover high-quality products carefully selected to bring you comfort, style, and value in every purchase
+                        Discover high-quality products carefully selected to bring you comfort, style, and
+                        value in every purchase
                     </p>
                 </div>
                 <div class="image">
@@ -50,23 +51,7 @@
         <!-- Start Products -->
         <div class="products" id="products">
             <h2 class="main-title">products</h2>
-            <div class="container">
-                <div class="box">
-                    <img src="images/" alt="" />
-                    <div class="content">
-                        <h3 id="product-name">productName</h3>
-                        <p id="description">productDescription</p>
-                        <p id="category">productCategory</p>
-                    </div>
-                    <div class="info">
-                        <a href="#" id="product-price">productPrice $</a>
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </div>
-
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
-                </div>
-            </div>
+            <div class="container"></div> <!-- Products will be injected dynamically -->
         </div>
         <div class="add-product" id="add-product">
             <h3 style="text-align: center">Add Product</h3>
@@ -94,7 +79,7 @@
             </form>
         </div>
         <!-- End Products -->
-         <!-- Start Stats -->
+        <!-- Start Stats -->
         <div class="stats" id="stats">
             <h2>Our Awesome Stats</h2>
             <div class="container">
@@ -144,7 +129,8 @@
                         </li>
                     </ul>
                     <p class="text">
-                        Bosla is an eCommerce platform designed to make online shopping simple, fast, and secure. We offer a wide range of products
+                        Bosla is an eCommerce platform designed to make online shopping simple, fast, and
+                        secure. We offer a wide range of products
                     </p>
                 </div>
                 <div class="box">
@@ -170,7 +156,7 @@
                         <div class="info">
                             <span>+20107539517</span>
                             <span>+20107539517</span>
-                          </div>
+                        </div>
                     </div>
                 </div>
                 <div class="box footer-gallery">
@@ -184,6 +170,7 @@
             </div>
             <p class="copyright">&copy; 2025 Bosla. All rights reserved.</p>
         </div>
-        <!-- End Footer --> 
+        <!-- End Footer -->
+        <script src="js/main.js"></script>
     </body>
 </html>
