--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Bosla</title>
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/all.min.css" />
-        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
